test/error/ast/CallExcessParam.mod
MODULE CallExcessParam;
PROCEDURE P; END P;
BEGIN
  P(1);
END CallExcessParam.
